--- a/KELOMPOK5_A2.ipynb
+++ b/KELOMPOK5_A2.ipynb
@@ -73,6 +73,59 @@
     "from tensorflow.keras.preprocessing import image_dataset_from_directory\n",
     "from keras.preprocessing.image import ImageDataGenerator"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de2ea9c5",
+   "metadata": {},
+   "source": [
+    "## 2. DATA COLLECTING"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "68342d44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 3424 files belonging to 3 classes.\n",
+      "Found 1223 files belonging to 3 classes.\n",
+      "Found 247 files belonging to 3 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 2. DATA COLLECTINGdata_train = image_dataset_from_directory('dataset-output/train',\n",
+    "    label_mode = 'categorical',\n",
+    "    batch_size = 64,\n",
+    "    image_size = (150,150),\n",
+    "    class_names = ['rose', 'sunflower', 'tulip'],\n",
+    "    shuffle = True,\n",
+    "    seed = 47\n",
+    ")\n",
+    "\n",
+    "data_val = image_dataset_from_directory('dataset-output/val',\n",
+    "    batch_size =64,                                    \n",
+    "    label_mode = 'categorical',\n",
+    "    class_names = ['rose', 'sunflower', 'tulip'],\n",
+    "    image_size = (150,150),\n",
+    "    shuffle = True,\n",
+    "    seed = 47\n",
+    ")\n",
+    "\n",
+    "data_test = image_dataset_from_directory('dataset-output/test',\n",
+    "    batch_size =64,                                     \n",
+    "    label_mode = 'categorical',\n",
+    "    class_names = ['rose', 'sunflower', 'tulip'],\n",
+    "    image_size = (150,150),\n",
+    "    shuffle = True,\n",
+    "    seed = 47\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
